Header is not fixed in position on mobile

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -1,6 +1,6 @@
 .gallery-grid {
   display: grid;
-  max-width: 350px;
+  max-width: 341px;
   margin: 0px auto;
 }
 
