--- a/css/media.css
+++ b/css/media.css
@@ -27,6 +27,10 @@
 }
 
 @media (min-width: 800px) {
+  .fixed {
+    position: static;
+  }
+
   .logo {
     font-size: 2.5rem;
   }
@@ -62,7 +66,7 @@
 
   .gallery-grid {
     grid-template-columns: repeat(2, 1fr);
-    max-width: 800px;
+    max-width: 680px;
   }
 }
 
